--- a/angular.json
+++ b/angular.json
@@ -35,8 +35,10 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
+          
             "scripts": []
           },
           "configurations": {
@@ -101,5 +103,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
